after update JWT

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Jwt": {
+    "Key": "your_secret_key_here",
+    "Issuer": "your_issuer_here",
+    "Audience": "your_audience_here",
+    "ExpiryMinutes": 60
+  },
   "ConnectionStrings": {
     "DefaultDataBase": "Server=DESKTOP-SI8MC0H;Database=ImageEncryption;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;Language=us_english;"
     // "DefaultConnection": 
